<resources>
    <string name="app_name">2020 Scouting App</string>
    <string name="welcomeScreenTitle">Infinite Recharge Scouting App</string>
    <string name="scouterName">Enter Your Name Here:</string>
    <string name="matchNumber">Enter the Match Number Here:</string>
    <string name="robotNumber">Enter the Robot Number Here:</string>
    <string name="EditName">Name</string>
    <string name="editMatch">Match</string>
    <string name="editRobot">Robot</string>
    <string name="submit_FirstActivity">Submit</string>
    <string name="submit_PostMatchActivity">Submit Match</string>
    <string name="hasBroken">Robot Broken?</string>
    <string name="hasJammed">Have Power Cells Jammed?</string>
    <string name="hadClimbed">Has Robot Climbed?</string>
    <string name="hasTranslated">Has Robot Translated?</string>
    <string name="postMatchTitleText">Post Match Data</string>
    <string name="autoActivityTitleText">Autonomous Data</string>
    <string name="autocycleStartButton">Start Auto Cycle</string>
    <string name="autoEndCycleButton">End Auto Cycle</string>
    <string name="pickupLocation">Ball Pickup Location</string>
    <string name="ownFedder">Own Feeder Station</string>
    <string name="oppFeeder">Opponent\'s Feeder Station</string>
    <string name="openField">Open Field</string>
    <string name="promptPickupLocation">Where were cells picked up?</string>
    <string name="promtGoal">Where were cells deposited?</string>
    <string name="promtInner">Inner Port</string>
    <string name="promtOuter">Outer Port</string>
    <string name="promptLower">Lower Port</string>
    <string name="promtLocLine">Init Line</string>
    <string name="promptLocFrontTrench">Front Trench</string>
    <string name="promptLocBackTrench">Back Trench</string>
    <string name="promtLocTriangle">Triangle</string>
    <string name="moveOnToTele">Move on to Tele-op</string>
    <string name="teleopIntroText">Tele-op Data</string>
    <string name="startTEleCycle">Start Tele-op Cycle</string>
    <string name="endTelecycle">End Tele-op Cycle</string>
    <string name="moveontoendgame">Proceed to Endgame</string>
</resources>
