<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AutoActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autoActivityTitleText"
                android:textSize="36sp" />

            <Button
                android:id="@+id/autoStartButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startAutoCycle"
                android:text="@string/autocycleStartButton" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promptPickupLocation" />

            <RadioGroup
                android:id="@+id/pickupRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ownFedder" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/oppFeeder" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/openField" />
                </LinearLayout>
            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promptLower" />

            <com.example.a2020scoutingapp.widget.Counter
                android:id="@+id/lowerPortInput"
                android:layout_width="match_parent"
                android:layout_height="35dp">

            </com.example.a2020scoutingapp.widget.Counter>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promtOuter" />

            <com.example.a2020scoutingapp.widget.Counter
                android:id="@+id/outerPortInput"
                android:layout_width="match_parent"
                android:layout_height="35dp">

            </com.example.a2020scoutingapp.widget.Counter>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promtInner" />

            <com.example.a2020scoutingapp.widget.Counter
                android:id="@+id/innerPortInput"
                android:layout_width="match_parent"
                android:layout_height="35dp">

            </com.example.a2020scoutingapp.widget.Counter>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promtGoal" />

            <RadioGroup
                android:id="@+id/shootLocationInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/promtLocTriangle" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/promtLocLine" />

                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/promptLocBackTrench" />

                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/promptLocFrontTrench" />
                </LinearLayout>
            </RadioGroup>

            <Button
                android:id="@+id/autoRndCycleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="endAutoCycle"
                android:text="@string/autoEndCycleButton" />

            <Button
                android:id="@+id/moveToTeleopButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="moveToTeleop"
                android:text="@string/moveOnToTele" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>