<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostMatchActivity">

    <android.support.v7.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postMatchTitleText"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/brokenInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hasBroken" />

            <CheckBox
                android:id="@+id/climbedInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hadClimbed" />

            <CheckBox
                android:id="@+id/translateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hasTranslated" />

            <CheckBox
                android:id="@+id/jammedInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hasJammed" />

            <Button
                android:id="@+id/submitMatchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitMatch"
                android:text="@string/submit_PostMatchActivity" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>