<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreMatchActivity">

    <android.support.v7.widget.CardView
        android:layout_width="375dp"
        android:layout_height="279dp"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeScreenTitle"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editMatchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/EditName"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editMatch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editMatch" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/EditName"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/EditName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editRobotLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/EditName"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editRobot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editRobot" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="submitInfo"
                    android:text="@string/submit_FirstActivity" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>